удаление подержки читалки

--- a/index.html
+++ b/index.html
@@ -6,267 +6,334 @@
     <title>Document</title>
   </head>
   <body>
-      <!--Шапка профиля-->
+    <!--Шапка профиля-->
     <header>
-        <!--  основная навигация-->
-       <nav>
-            <a href="/">Wed Studio</a>
-            <ul>
-                <li>
-                    <a href="#">Студия</a>
-                </li>
-                <li>
-                    <a href="#">Портфолио</a>
-                </li>
-                <li>
-                    <a href="#">Студия</a>
-                </li>
-            </ul>
-       </nav>
+      <!--  основная навигация-->
+      <nav>
+        <a href="/">Wed Studio</a>
         <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">
-                    <img src="./images/header/envelope(hover).svg" alt="E-mail">
-                    info@devstudio.com
-                </a>
-            </li>
-            <li>
-                <a href="tel:+38 096 111 11 11">
-                    <img src="./images/header/smartphone.svg" alt="телефон">
-                    +38 096 111 11 11
-                </a>
-            </li>
+          <li>
+            <a href="#">Студия</a>
+          </li>
+          <li>
+            <a href="#">Портфолио</a>
+          </li>
+          <li>
+            <a href="#">Студия</a>
+          </li>
         </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">
+            <img src="./images/header/envelope(hover).svg" alt="E-mail" />
+            info@devstudio.com
+          </a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">
+            <img src="./images/header/smartphone.svg" alt="телефон" />
+            +38 096 111 11 11
+          </a>
+        </li>
+      </ul>
     </header>
     <!-- неповторяющийся контент-->
     <main>
-        <!--преимущества компании-->
-        <section>
-            <!-- позже нужно будет сделать заголовок невидимым -->
-            <h2>Особенности</h2>
+      <!--преимущества компании-->
+      <section>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/Features/antenna1.svg" alt="антенна" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/Features/clock1.svg" alt="часы" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/Features/diagram1.svg" alt="диаграмма" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/Features/astronaut1.svg" alt="космонавт" />
+            </a>
+          </li>
+        </ul>
+      </section>
+      <!--занятость компании-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/What-are-we-doing/img.png" alt="ноутбук" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/What-are-we-doing/box.png" alt="смартфон" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/What-are-we-doing/img(1).png"
+                alt="apple mac"
+              />
+            </a>
+          </li>
+        </ul>
+      </section>
+      <!--специалисты компании-->
+      <section>
+        <h2>
+          Наша команда
+        </h2>
+        <ul>
+          <li>
+            <img
+              src="./images/Team/specialists/img.png"
+              alt="photo of John Smith"
+            />
+            <h3>
+              John Smith
+            </h3>
+            <p>
+              Product Designer
+            </p>
+            <!--соц.сети -->
             <ul>
-                <li>
-                    <a href="#">
-                        <img src="./images/Features/antenna1.svg" alt="антенна">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Features/clock1.svg" alt="часы">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Features/diagram1.svg" alt="диаграмма">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Features/astronaut1.svg" alt="космонавт">
-                    </a>
-                </li>
-            </ul>
-        </section>
-        <!--занятость компании-->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-            <li>
+              <li>
                 <a href="#">
-                    <img src="./images/What-are-we-doing/img.png" alt="ноутбук">
+                  <img
+                    src="./images/Team/social-networks/instagram2.svg"
+                    alt="instagram"
+                  />
                 </a>
-            </li>
-            <li>
+              </li>
+              <li>
                 <a href="#">
-                    <img src="./images/What-are-we-doing/box.png" alt="смартфон">
+                  <img
+                    src="./images/Team/social-networks/twitter1.svg"
+                    alt="twitter"
+                  />
                 </a>
-            </li>
-            <li>
+              </li>
+              <li>
                 <a href="#">
-                    <img src="./images/What-are-we-doing/img(1).png" alt="apple mac">
+                  <img
+                    src="./images/Team/social-networks/facebook1.svg"
+                    alt="facebook"
+                  />
                 </a>
-            </li>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/linkedin1.svg"
+                    alt="linkedin"
+                  />
+                </a>
+              </li>
             </ul>
-        </section>
-        <!--специалисты компании-->
-        <section>
-            <h2>
-                Наша команда
-            </h2>
+          </li>
+          <li>
+            <img
+              src="./images/Team/specialists/img(1).png"
+              alt="photo of Marta Stewart"
+            />
+            <h3>
+              Marta Stewart
+            </h3>
+            <p>
+              Frontend Developer
+            </p>
+            <!--соц.сети -->
             <ul>
-                <li>
-                    <img src="./images/Team/specialists/img.png" alt="photo of John Smith">
-                    <h3>
-                        John Smith
-                    </h3>
-                    <p>
-                        Product Designer
-                    </p>
-                    <!--соц.сети -->
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/instagram2.svg" alt="instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/twitter1.svg" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/facebook1.svg" alt="facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/linkedin1.svg" alt="linkedin">
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="./images/Team/specialists/img(1).png" alt="photo of Marta Stewart">
-                    <h3>
-                        Marta Stewart
-                    </h3>
-                    <p>
-                        Frontend Developer
-                    </p>
-                    <!--соц.сети -->
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/instagram2.svg" alt="instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/twitter1.svg" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/facebook1.svg" alt="facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/linkedin1.svg" alt="linkedin">
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="./images/Team/specialists/img(2).png" alt="photo of Robert Jakis">
-                    <h3>
-                        Robert Jakis
-                    </h3>
-                    <p>
-                        Marketing
-                    </p>
-                    <!--соц.сети -->
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/instagram2.svg" alt="instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/twitter1.svg" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/facebook1.svg" alt="facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/linkedin1.svg" alt="linkedin">
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="./images/Team/specialists/img(3).png" alt="photo of Martin Doe">
-                    <h3>
-                        Martin Doe
-                    </h3>
-                    <p>
-                        UI Designer
-                    </p>
-                    <!--соц.сети -->
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/instagram2.svg" alt="instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/twitter1.svg" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/facebook1.svg" alt="facebook">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="./images/Team/social-networks/linkedin1.svg" alt="linkedin">
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/instagram2.svg"
+                    alt="instagram"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/twitter1.svg"
+                    alt="twitter"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/facebook1.svg"
+                    alt="facebook"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/linkedin1.svg"
+                    alt="linkedin"
+                  />
+                </a>
+              </li>
             </ul>
-        </section>
-        <!--Постоянные клиенты-->
-        <section>
-            <h2>
-                Постоянные клиенты
-            </h2>
+          </li>
+          <li>
+            <img
+              src="./images/Team/specialists/img(2).png"
+              alt="photo of Robert Jakis"
+            />
+            <h3>
+              Robert Jakis
+            </h3>
+            <p>
+              Marketing
+            </p>
+            <!--соц.сети -->
             <ul>
-                <li>
-                    <a href="#">
-                        <img src="./images/Regular-customers/logo1.svg" alt="YA&CO">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Regular-customers/logo2.svg" alt="company tagline here">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Regular-customers/Object.svg" alt="company">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Regular-customers/logo4.svg" alt="FOSTER PETERS">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Regular-customers/logo5.svg" alt="brand">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/Regular-customers/Object(1).svg" alt="company tag line">
-                    </a>
-                </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/instagram2.svg"
+                    alt="instagram"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/twitter1.svg"
+                    alt="twitter"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/facebook1.svg"
+                    alt="facebook"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/linkedin1.svg"
+                    alt="linkedin"
+                  />
+                </a>
+              </li>
             </ul>
-        </section>
+          </li>
+          <li>
+            <img
+              src="./images/Team/specialists/img(3).png"
+              alt="photo of Martin Doe"
+            />
+            <h3>
+              Martin Doe
+            </h3>
+            <p>
+              UI Designer
+            </p>
+            <!--соц.сети -->
+            <ul>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/instagram2.svg"
+                    alt="instagram"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/twitter1.svg"
+                    alt="twitter"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/facebook1.svg"
+                    alt="facebook"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/Team/social-networks/linkedin1.svg"
+                    alt="linkedin"
+                  />
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <!--Постоянные клиенты-->
+      <section>
+        <h2>
+          Постоянные клиенты
+        </h2>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/Regular-customers/logo1.svg" alt="YA&CO" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/Regular-customers/logo2.svg"
+                alt="company tagline here"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/Regular-customers/Object.svg" alt="company" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/Regular-customers/logo4.svg"
+                alt="FOSTER PETERS"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/Regular-customers/logo5.svg" alt="brand" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/Regular-customers/Object(1).svg"
+                alt="company tag line"
+              />
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--подвал-->
-    <footer>
-    </footer>
-    
+    <footer></footer>
   </body>
 </html>
