добавление размеров изображениям+футер

--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./images/What-are-we-doing/img.png" alt="ноутбук" />
+              <img src="./images/What-are-we-doing/img.png" width: 380px height:
+              294px alt="ноутбук" />
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/What-are-we-doing/box.png" alt="смартфон" />
+              <img src="./images/What-are-we-doing/box.png" width: 380px height:
+              294px alt="смартфон" />
             </a>
           </li>
           <li>
             <a href="#">
-              <img
-                src="./images/What-are-we-doing/img(1).png"
-                alt="apple mac"
-              />
+              <img src="./images/What-are-we-doing/img(1).png" width: 380px
+              height: 294px alt="apple mac" />
             </a>
           </li>
         </ul>
@@ -334,6 +334,24 @@
       </section>
     </main>
     <!--подвал-->
-    <footer></footer>
+    <footer>
+      <a href="/">Wed Studio</a>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26<br />
+        <a href="mailto:info@devstudio.com"> info@devstudio.com </a><br />
+        <a href="tel:+380961111111">
+          +38 096 111 11 11
+        </a>
+      </address>
+      <b>
+        присоединяйтесь
+      </b>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </footer>
   </body>
 </html>
