добавление разметки изображениям

--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@
         </h2>
         <ul>
           <li>
-            <img
-              src="./images/Team/specialists/img.png"
-              alt="photo of John Smith"
-            />
+            <img src="./images/Team/specialists/img.png" width: 278px height:
+            260px alt="photo of John Smith" />
             <h3>
               John Smith
             </h3>
@@ -143,10 +141,8 @@
             </ul>
           </li>
           <li>
-            <img
-              src="./images/Team/specialists/img(1).png"
-              alt="photo of Marta Stewart"
-            />
+            <img src="./images/Team/specialists/img(1).png" width: 278px height:
+            260px alt="photo of Marta Stewart" />
             <h3>
               Marta Stewart
             </h3>
@@ -190,10 +186,8 @@
             </ul>
           </li>
           <li>
-            <img
-              src="./images/Team/specialists/img(2).png"
-              alt="photo of Robert Jakis"
-            />
+            <img src="./images/Team/specialists/img(2).png" width: 278px height:
+            260px alt="photo of Robert Jakis" />
             <h3>
               Robert Jakis
             </h3>
@@ -237,10 +231,8 @@
             </ul>
           </li>
           <li>
-            <img
-              src="./images/Team/specialists/img(3).png"
-              alt="photo of Martin Doe"
-            />
+            <img src="./images/Team/specialists/img(3).png" width: 278px height:
+            260px alt="photo of Martin Doe" />
             <h3>
               Martin Doe
             </h3>
