--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
         <li></li>
         <li></li>
       </ul>
+      <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
