исправление ошибок связаных с размером изображений

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <main>
       <!--преимущества компании-->
       <section>
+        <!-- позже нужно будет сделать невидемым -->
+        <h2>Особенности</h2>
         <ul>
           <li>
             <a href="#">
@@ -71,20 +73,32 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./images/What-are-we-doing/img.png" width: 380px height:
-              294px alt="ноутбук" />
+              <img
+                src="./images/What-are-we-doing/img.png"
+                width="380"
+                height="294"
+                alt="ноутбук"
+              />
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/What-are-we-doing/box.png" width: 380px height:
-              294px alt="смартфон" />
+              <img
+                src="./images/What-are-we-doing/box.png"
+                width="380"
+                height="294"
+                alt="смартфон"
+              />
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/What-are-we-doing/img(1).png" width: 380px
-              height: 294px alt="apple mac" />
+              <img
+                src="./images/What-are-we-doing/img(1).png"
+                width="380"
+                height="294"
+                alt="apple mac"
+              />
             </a>
           </li>
         </ul>
@@ -96,8 +110,12 @@
         </h2>
         <ul>
           <li>
-            <img src="./images/Team/specialists/img.png" width: 278px height:
-            260px alt="photo of John Smith" />
+            <img
+              src="./images/Team/specialists/img.png"
+              width="278"
+              height="260"
+              alt="photo of John Smith"
+            />
             <h3>
               John Smith
             </h3>
@@ -141,8 +159,12 @@
             </ul>
           </li>
           <li>
-            <img src="./images/Team/specialists/img(1).png" width: 278px height:
-            260px alt="photo of Marta Stewart" />
+            <img
+              src="./images/Team/specialists/img(1).png"
+              width="278"
+              height="260"
+              alt="photo of Marta Stewart"
+            />
             <h3>
               Marta Stewart
             </h3>
@@ -186,8 +208,12 @@
             </ul>
           </li>
           <li>
-            <img src="./images/Team/specialists/img(2).png" width: 278px height:
-            260px alt="photo of Robert Jakis" />
+            <img
+              src="./images/Team/specialists/img(2).png"
+              width="278"
+              height="260"
+              alt="photo of Robert Jakis"
+            />
             <h3>
               Robert Jakis
             </h3>
@@ -231,8 +257,12 @@
             </ul>
           </li>
           <li>
-            <img src="./images/Team/specialists/img(3).png" width: 278px height:
-            260px alt="photo of Martin Doe" />
+            <img
+              src="./images/Team/specialists/img(3).png"
+              width="278"
+              height="260"
+              alt="photo of Martin Doe"
+            />
             <h3>
               Martin Doe
             </h3>
