удаление всех cvg, добавление aria-label

--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">
-            <img src="./images/header/envelope(hover).svg" alt="E-mail" />
+          <a href="mailto:info@devstudio.com" aria-label="E-mail">
             info@devstudio.com
           </a>
         </li>
         <li>
-          <a href="tel:+380961111111">
-            <img src="./images/header/smartphone.svg" alt="телефон" />
+          <a href="tel:+380961111111" aria-label="телефон">
             +38 096 111 11 11
           </a>
         </li>
@@ -46,24 +44,44 @@
         <h2>Особенности</h2>
         <ul>
           <li>
-            <a href="#">
-              <img src="./images/Features/antenna1.svg" alt="антенна" />
-            </a>
+            <a href="#" aria-label="антенна"> </a>
+            <h3>
+              Внимание к деталям
+            </h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/Features/clock1.svg" alt="часы" />
-            </a>
+            <a href="#" aria-label="часы"> </a>
+            <h3>
+              Пунктуальность
+            </h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/Features/diagram1.svg" alt="диаграмма" />
-            </a>
+            <a href="#" aria-label="диаграмма"> </a>
+            <h3>
+              Планирование
+            </h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/Features/astronaut1.svg" alt="космонавт" />
-            </a>
+            <a href="#" aria-label="космонавт"> </a>
+            <h3>
+              Современные технологии
+            </h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
@@ -125,36 +143,16 @@
             <!--соц.сети -->
             <ul>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/instagram2.svg"
-                    alt="instagram"
-                  />
-                </a>
+                <a href="#" aria-label="instagram"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/twitter1.svg"
-                    alt="twitter"
-                  />
-                </a>
+                <a href="#" aria-label="twitter"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/facebook1.svg"
-                    alt="facebook"
-                  />
-                </a>
+                <a href="#" aria-label="facebook"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/linkedin1.svg"
-                    alt="linkedin"
-                  />
-                </a>
+                <a href="#" aria-label="linkedin"> </a>
               </li>
             </ul>
           </li>
@@ -174,36 +172,16 @@
             <!--соц.сети -->
             <ul>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/instagram2.svg"
-                    alt="instagram"
-                  />
-                </a>
+                <a href="#" aria-label="instagram"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/twitter1.svg"
-                    alt="twitter"
-                  />
-                </a>
+                <a href="#" aria-label="twitter"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/facebook1.svg"
-                    alt="facebook"
-                  />
-                </a>
+                <a href="#" aria-label="facebook"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/linkedin1.svg"
-                    alt="linkedin"
-                  />
-                </a>
+                <a href="#" aria-label="linkedin"> </a>
               </li>
             </ul>
           </li>
@@ -223,36 +201,16 @@
             <!--соц.сети -->
             <ul>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/instagram2.svg"
-                    alt="instagram"
-                  />
-                </a>
+                <a href="#" aria-label="instagram"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/twitter1.svg"
-                    alt="twitter"
-                  />
-                </a>
+                <a href="#" aria-label="twitter"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/facebook1.svg"
-                    alt="facebook"
-                  />
-                </a>
+                <a href="#" aria-label="facebook"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/linkedin1.svg"
-                    alt="linkedin"
-                  />
-                </a>
+                <a href="#" aria-label="linkedin"> </a>
               </li>
             </ul>
           </li>
@@ -272,36 +230,16 @@
             <!--соц.сети -->
             <ul>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/instagram2.svg"
-                    alt="instagram"
-                  />
-                </a>
+                <a href="#" aria-label="instagram"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/twitter1.svg"
-                    alt="twitter"
-                  />
-                </a>
+                <a href="#" aria-label="twitter"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/facebook1.svg"
-                    alt="facebook"
-                  />
-                </a>
+                <a href="#" aria-label="facebook"> </a>
               </li>
               <li>
-                <a href="#">
-                  <img
-                    src="./images/Team/social-networks/linkedin1.svg"
-                    alt="linkedin"
-                  />
-                </a>
+                <a href="#" aria-label="linkedin"> </a>
               </li>
             </ul>
           </li>
@@ -314,43 +252,22 @@
         </h2>
         <ul>
           <li>
-            <a href="#">
-              <img src="./images/Regular-customers/logo1.svg" alt="YA&CO" />
-            </a>
+            <a href="#" aria-label="YA & CO"> </a>
           </li>
           <li>
-            <a href="#">
-              <img
-                src="./images/Regular-customers/logo2.svg"
-                alt="company tagline here"
-              />
-            </a>
+            <a href="#" aria-label="company tagline here"> </a>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/Regular-customers/Object.svg" alt="company" />
-            </a>
+            <a href="#" aria-label="company"> </a>
           </li>
           <li>
-            <a href="#">
-              <img
-                src="./images/Regular-customers/logo4.svg"
-                alt="FOSTER PETERS"
-              />
-            </a>
+            <a href="#" aria-label="FOSTER PETERS"> </a>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/Regular-customers/logo5.svg" alt="brand" />
-            </a>
+            <a href="#" aria-label="brand"> </a>
           </li>
           <li>
-            <a href="#">
-              <img
-                src="./images/Regular-customers/Object(1).svg"
-                alt="company tag line"
-              />
-            </a>
+            <a href="#" aria-label="company tag line"> </a>
           </li>
         </ul>
       </section>
@@ -369,10 +286,18 @@
         присоединяйтесь
       </b>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+          <a href="#" aria-label="instagram"> </a>
+        </li>
+        <li>
+          <a href="#" aria-label="twitter"> </a>
+        </li>
+        <li>
+          <a href="#" aria-label="facebook"> </a>
+        </li>
+        <li>
+          <a href="#" aria-label="linkedin"> </a>
+        </li>
       </ul>
       <p>2020 | Developed by GoIT Students</p>
     </footer>
