--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
         <h2>
           Постоянные клиенты
         </h2>
+        <!-- логотипы компаний -->
         <ul>
           <li>
             <a href="#" aria-label="YA & CO"> </a>
@@ -275,6 +276,7 @@
     <!--подвал-->
     <footer>
       <a href="/">Wed Studio</a>
+      <!-- адресс -->
       <address>
         г. Киев, пр-т Леси Украинки, 26<br />
         <a href="mailto:info@devstudio.com"> info@devstudio.com </a><br />
@@ -285,6 +287,7 @@
       <b>
         присоединяйтесь
       </b>
+      <!-- соц.сети -->
       <ul>
         <li>
           <a href="#" aria-label="instagram"> </a>
