редактирование пункта "чем мы занимаемя"

--- a/index.html
+++ b/index.html
@@ -90,33 +90,36 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
+            <img
+              src="./images/What-are-we-doing/img.png"
+              width="380"
+              height="294"
+              alt="ноутбук"
+            />
             <a href="#">
-              <img
-                src="./images/What-are-we-doing/img.png"
-                width="380"
-                height="294"
-                alt="ноутбук"
-              />
+              Десктопные приложения
             </a>
           </li>
           <li>
+            <img
+              src="./images/What-are-we-doing/box.png"
+              width="380"
+              height="294"
+              alt="смартфон"
+            />
             <a href="#">
-              <img
-                src="./images/What-are-we-doing/box.png"
-                width="380"
-                height="294"
-                alt="смартфон"
-              />
+              Мобильные приложения
             </a>
           </li>
           <li>
+            <img
+              src="./images/What-are-we-doing/img(1).png"
+              width="380"
+              height="294"
+              alt="apple mac"
+            />
             <a href="#">
-              <img
-                src="./images/What-are-we-doing/img(1).png"
-                width="380"
-                height="294"
-                alt="apple mac"
-              />
+              Дизайнерские решения
             </a>
           </li>
         </ul>
